--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,15 +1,6 @@
-/* importo bootstrap dalla cartella node_modules usando l'alias settato in vite.config.js */
-@import "~bootstrap/scss/bootstrap";
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-img {
-    max-width: 100%;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
     background-color: #222;
